logs/dag_id=Air_pollution_data_pipeline/run_id=manual__2024-06-17T15:51:48+00:00/task_id=create_table/attempt=1.log
[2024-06-17T15:51:53.666+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-06-17T15:51:53.730+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: Air_pollution_data_pipeline.create_table manual__2024-06-17T15:51:48+00:00 [queued]>
[2024-06-17T15:51:53.749+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: Air_pollution_data_pipeline.create_table manual__2024-06-17T15:51:48+00:00 [queued]>
[2024-06-17T15:51:53.749+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 6
[2024-06-17T15:51:53.779+0000] {taskinstance.py:2330} INFO - Executing <Task(_PythonDecoratedOperator): create_table> on 2024-06-17 15:51:48+00:00
[2024-06-17T15:51:53.787+0000] {standard_task_runner.py:63} INFO - Started process 5118 to run task
[2024-06-17T15:51:53.795+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'Air_pollution_data_pipeline', 'create_table', 'manual__2024-06-17T15:51:48+00:00', '--job-id', '1052', '--raw', '--subdir', 'DAGS_FOLDER/main.py', '--cfg-path', '/tmp/tmp0c84mn5o']
[2024-06-17T15:51:53.799+0000] {standard_task_runner.py:91} INFO - Job 1052: Subtask create_table
[2024-06-17T15:51:53.905+0000] {task_command.py:426} INFO - Running <TaskInstance: Air_pollution_data_pipeline.create_table manual__2024-06-17T15:51:48+00:00 [running]> on host fa4d239664b0
[2024-06-17T15:51:54.080+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='khalid' AIRFLOW_CTX_DAG_ID='Air_pollution_data_pipeline' AIRFLOW_CTX_TASK_ID='create_table' AIRFLOW_CTX_EXECUTION_DATE='2024-06-17T15:51:48+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-06-17T15:51:48+00:00'
[2024-06-17T15:51:54.082+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-06-17T15:51:54.083+0000] {create_table.py:57} INFO - creating table
[2024-06-17T15:51:54.085+0000] {baseoperator.py:400} WARNING - SQLExecuteQueryOperator.execute cannot be called outside TaskInstance!
[2024-06-17T15:51:54.085+0000] {sql.py:276} INFO - Executing: 
        CREATE TABLE IF NOT EXISTS emission (
            Entity VARCHAR(100),
            Code VARCHAR(100),
            Year INT,
            "Nitrogen_oxide_NOx" FLOAT(10, 5), 
            "Sulphur_dioxide_SO_emissions" FLOAT(10, 5), 
            "Carbon_monoxide_CO_emissions" FLOAT(10, 5), 
            "Organic_carbon_OC_emissions" FLOAT(10, 5), 
            "Non_methane_volatile_organic_compounds_NMVOC_emissions" FLOAT(10, 5), 
            "Black_carbon_BC_emissions" FLOAT(10, 5),
            "Ammonia_NH_emissions" FLOAT(10, 5)
        );

[2024-06-17T15:51:54.103+0000] {base.py:84} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-06-17T15:51:54.118+0000] {base.py:84} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-06-17T15:51:54.124+0000] {sql.py:487} INFO - Running statement: 
        CREATE TABLE IF NOT EXISTS emission (
            Entity VARCHAR(100),
            Code VARCHAR(100),
            Year INT,
            "Nitrogen_oxide_NOx" FLOAT(10, 5), 
            "Sulphur_dioxide_SO_emissions" FLOAT(10, 5), 
            "Carbon_monoxide_CO_emissions" FLOAT(10, 5), 
            "Organic_carbon_OC_emissions" FLOAT(10, 5), 
            "Non_methane_volatile_organic_compounds_NMVOC_emissions" FLOAT(10, 5), 
            "Black_carbon_BC_emissions" FLOAT(10, 5),
            "Ammonia_NH_emissions" FLOAT(10, 5)
        );
, parameters: None
[2024-06-17T15:51:54.126+0000] {create_table.py:68} ERROR - Error creating table
Traceback (most recent call last):
  File "/opt/airflow/dags/database/create_table.py", line 63, in create_table
    create_table_task.execute(context=None)  # Execute the task
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/providers/common/sql/hooks/sql.py", line 435, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/providers/common/sql/hooks/sql.py", line 492, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ","
LINE 6:             "Nitrogen_oxide_NOx" FLOAT(10, 5), 
                                                 ^

[2024-06-17T15:51:54.130+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-06-17T15:51:54.130+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/decorators/base.py", line 265, in execute
    return_value = super().execute(context)
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/operators/python.py", line 252, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/database/create_table.py", line 63, in create_table
    create_table_task.execute(context=None)  # Execute the task
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/providers/common/sql/hooks/sql.py", line 435, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/providers/common/sql/hooks/sql.py", line 492, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ","
LINE 6:             "Nitrogen_oxide_NOx" FLOAT(10, 5), 
                                                 ^

[2024-06-17T15:51:54.146+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=Air_pollution_data_pipeline, task_id=create_table, run_id=manual__2024-06-17T15:51:48+00:00, execution_date=20240617T155148, start_date=20240617T155153, end_date=20240617T155154
[2024-06-17T15:51:54.170+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 1052 for task create_table (syntax error at or near ","
LINE 6:             "Nitrogen_oxide_NOx" FLOAT(10, 5), 
                                                 ^
; 5118)
[2024-06-17T15:51:54.209+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-06-17T15:51:54.258+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-06-17T15:51:54.261+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
